--- a/static/chat.html
+++ b/static/chat.html
@@ -20,16 +20,10 @@
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
-          <h3><i class="fas fa-comments"></i> Room Name:</h3>
-          <h2 id="room-name">JavaScript</h2>
-          <h3><i class="fas fa-users"></i> Users</h3>
-          <ul id="users">
-            <li>Brad</li>
-            <li>John</li>
-            <li>Mary</li>
-            <li>Paul</li>
-            <li>Mike</li>
-          </ul>
+          <h4><i class="fas fa-comments"></i> Room Name:</h4>
+          <h2 id="room-name"></h2>
+          <h4><i class="fas fa-users"></i> Users</h4>
+          <ul id="users"></ul>
         </div>
         <div class="chat-messages"></div>
         </div>
